--- a/news.html
+++ b/news.html
@@ -154,7 +154,7 @@
     var integers = [22, 50, 18, 10 , 8, 5, 15, 11]
     var somme = 0;
     integers.map((el) => somme = somme+el);
-    console.log(el)
+    console.log(somme/integers.length);
 
     </script>
 </body>
