--- a/news.html
+++ b/news.html
@@ -40,6 +40,8 @@
     </style>
     <title>Fake news</title>
     <script src="./data.js"></script>
+    <script src="./songs_data.js"></script>
+
     
 </head>
 <body>
@@ -52,7 +54,6 @@
         
     </div>
     <script>
-
         // récupérer le composant qui va contenir mon résultat
         var my_component = document.querySelector("#component");
         // Initialisation du résultat
